--- a/RoomDebts/ViewControllers/Products/Storyboard/Products.storyboard
+++ b/RoomDebts/ViewControllers/Products/Storyboard/Products.storyboard
@@ -10,6 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="Rubik-Bold.ttf">
+            <string>Rubik-Bold</string>
+        </array>
         <array key="Rubik-Light.ttf">
             <string>Rubik-Light</string>
         </array>
@@ -33,6 +36,32 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="wlP-gw-w2f">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="NeK-xd-YU4">
+                                    <rect key="frame" x="0.0" y="208" width="414" height="82"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NbB-w5-0PQ" customClass="PrimaryButton" customModule="RoomDebts" customModuleProvider="target">
+                                            <rect key="frame" x="16" y="16" width="382" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="50" id="cvO-Zy-iN9"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="Rubik-Bold" family="Rubik" pointSize="17"/>
+                                            <state key="normal" title="Calculate"/>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="NbB-w5-0PQ" secondAttribute="bottom" constant="16" id="1qw-cz-cCs"/>
+                                        <constraint firstItem="NbB-w5-0PQ" firstAttribute="leading" secondItem="NeK-xd-YU4" secondAttribute="leading" constant="16" id="Kem-Po-sgz"/>
+                                        <constraint firstAttribute="trailing" secondItem="NbB-w5-0PQ" secondAttribute="trailing" constant="16" id="pxc-8i-k29"/>
+                                        <constraint firstItem="NbB-w5-0PQ" firstAttribute="top" secondItem="NeK-xd-YU4" secondAttribute="top" constant="16" id="zBh-j7-v2g"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProductCell" rowHeight="180" id="yla-TD-sxp" customClass="ProductTableViewCell" customModule="RoomDebts" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="180"/>
